--- a/RGB color game/colorGame.html
+++ b/RGB color game/colorGame.html
@@ -8,8 +8,11 @@
 
 <h1> The Great <span id = "colorDisplay">RGB</span> Color Game </h1>
 
-<div>
+<div id = "stripe">
+    <button id="reset">NEW COLORS</button>
     <span id="message"></span>
+    <button id="easyBtn">EASY</button>
+    <button class="selected" id="hardBtn">HARD</button>
 </div>
 
 <div id="container">
