--- a/RGB color game/colorGame.html
+++ b/RGB color game/colorGame.html
@@ -3,10 +3,16 @@
 <head>
     <title>RGB Color Game</title>
     <link rel="stylesheet" type="text/css" href="colorGame.css">
+    <link href="https://fonts.googleapis.com/css?family=Dosis:400,700,800" rel="stylesheet">
 </head>
 <body>
 
-<h1> The Great <span id = "colorDisplay">RGB</span> Color Game </h1>
+<h1> The Great
+    <br>
+    <span id = "colorDisplay">RGB</span>
+    <br>
+    Color Game
+</h1>
 
 <div id = "stripe">
     <button id="reset">NEW COLORS</button>
