--- a/RGB color game/colorGame.html
+++ b/RGB color game/colorGame.html
@@ -17,8 +17,8 @@
 <div id = "stripe">
     <button id="reset">NEW COLORS</button>
     <span id="message"></span>
-    <button id="easyBtn">EASY</button>
-    <button class="selected" id="hardBtn">HARD</button>
+    <button class="mode">EASY</button>
+    <button class="selected mode">HARD</button>
 </div>
 
 <div id="container">
