add a new mode - midium

--- a/RGB color game/colorGame.html
+++ b/RGB color game/colorGame.html
@@ -18,10 +18,14 @@
     <button id="reset">NEW COLORS</button>
     <span id="message"></span>
     <button class="mode">EASY</button>
-    <button class="selected mode">HARD</button>
+    <button class="selected mode">MIDIUM</button>
+    <button class="mode">HARD</button>
 </div>
 
 <div id="container">
+    <div class="square"></div>
+    <div class="square"></div>
+    <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
     <div class="square"></div>
