--- a/Todo List App/todoList.html
+++ b/Todo List App/todoList.html
@@ -2,17 +2,21 @@
 <html>
 <head>
     <title>Todo List</title>
-    <script src="list.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/todo.css">
+    <script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-<h1>Todo List</h1>
-<ul>
-    <li>"new" Add a todo</li>
-    <li>"list" List all todos</li>
-    <li>"quit" Quit App</li>
-    <li>"delete" Remove specific element</li>
+<div id="container">
+	<h1>Todo List</h1>
+	<input type="text">
+	<ul>
+		<li><span>X</span>A</li>
+		<li><span>X</span>B</li>
+		<li><span>X</span>C</li>
+		<li><span>X</span>D</li>
+	</ul>
+</div>
 
-</ul>
-
+<script type="text/javascript" src="assets/js/todo.js"></script>
 </body>
 </html>
